2002-05-29  Sven Wischnowsky  <wischnow@zsh.org>

	* 17252: Completion/Unix/Type/_path_files: fix for use of (z)
	parameter modifier; the first word in the parameter is parsed
	like the first word on a command line, treating parens
	specially

2002-05-29  Peter Stephenson  <pws@csr.com>

	* 17250: Src/signals.c: don't execsave()/execrestore() around
	traps which are executed synchronously, which caused unexpected
	return statuses from `trap "return ..." EXIT'.

	* 17249: Src/Modules/tcp.c: send output from `ztcp' or `ztcp -v'
	to stdout, not the zle file descriptor.

2002-05-28  Oliver Kiddle  <opk@zsh.org>

	* 17245: Completion/Unix/Command/_texinfo: add handling for
	the other texinfo commands (besides info)

2002-05-28  Clint Adams  <clint@zsh.org>

	* 17244: Completion/Debian/Command/_dpkg:
	don't complete udebs for --unpack or -i.

2002-05-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 17237: Src/Zle/complist.c: follow-up to 17222, make the
	optimisation work for some more keys again

2002-05-26  Clint Adams  <clint@zsh.org>

	* 17235: Src/Modules/datetime.c, Src/Modules/datetime.mdd:
	strftime builtin.

	* 17234: Completion/Unix/Command/_cvs:
	don't call _path_files with empty ().

2002-05-25  Clint Adams  <clint@zsh.org>

	* 17225: Completion/Unix/Command/_cvs:
	change $CVSIGNORE to $=CVSIGNORE.

2002-05-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 17222: Src/Zle/complist.c: we have to disable 17219 for some
	keys because their code doesn't set up the variables we need

2002-05-24  Peter Stephenson  <pws@csr.com>

	* 17220: Src/Modules/tcp.c: bugs displaying host names and remote
	host address when using `ztcp' to list connections.

2002-05-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 17219: Src/Zle/complist.c: make re-display in menu selection
	faster; redraw only the previously and newly selected matches

2002-05-23 Andrej Borsenkow  <bor@zsh.org>

	* unposted: Completion/Redhat/Command/_service: uncomment
	zstyle now that it works (c.f. 17148)
