@@ -1,3 +1,8 @@
+2002-05-30  Peter Stephenson  <pws@csr.com>
+
+	* 17253: Src/Modules/tcp.c, Doc/Zsh/mod_tcp.c: ztcp -l provides
+	parseable information on sessions.
+
 2002-05-29  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 17252: Completion/Unix/Type/_path_files: fix for use of (z)
